--- a/src/index.css
+++ b/src/index.css
@@ -1054,6 +1054,10 @@ a {
   width: 100%; 
   max-width: 100vw; 
   padding-bottom: 10px; 
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .project_img_container {
