--- a/src/index.css
+++ b/src/index.css
@@ -1054,7 +1054,7 @@ a {
   width: 100%; 
   max-width: 100vw; 
   padding-bottom: 10px; 
-  
+
   /* Hide scrollbar for IE, Edge and Firefox */
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
@@ -1192,6 +1192,10 @@ p {
 
 .discover_table:nth-child(2) {
   margin-left: 20px;
+}
+
+.ui_overview {
+  padding-bottom: 20px;
 }
 
 .ui_left {
