--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@
 }
 
 .nav_menu {
-  font-size: 15px;
+  font-size: 17px;
 }
 
 .nav_num {
@@ -212,6 +212,10 @@ a {
   margin-right: 4px;
 }
 
+.nav:not(:first-child) > li {
+  margin-top: 5px;
+}
+
 .nav:not(:nth-child(4)) {
   margin-bottom: 5px;
 }
@@ -338,7 +342,7 @@ a {
 
 .first_box {
   border-radius: 20px;
-  height: 90vh;
+  height: 87vh;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -401,6 +405,7 @@ a {
   margin-top: 30px;
   padding: 0 14vw;
   text-align: left;
+  line-height: 140%;
   /* font-weight: 500; */
 }
 
@@ -492,7 +497,7 @@ a {
 /* Banner */
 .banner {
   display: flex;
-  background-image: url("./assets/img/banner.png");
+  background-color:#22C182;
   justify-content: center;
   align-items: center;
   padding: 70px 0 40px 0;
@@ -970,7 +975,7 @@ a {
   padding: 70px;
   text-align: center;
   font-size: 35px;
-  background-image: url("./assets/img/banner.png");
+  background-color:#22C182;
   margin-top: 140px;
 }
 
@@ -1004,7 +1009,7 @@ a {
   position: absolute;
   bottom: 10px;
   display: flex;
-  background-image: url("./assets/img/banner.png");
+  background-color: #22C182;
   justify-content: center;
   align-items: center;
   width: 300%;
