--- a/src/index.css
+++ b/src/index.css
@@ -579,7 +579,7 @@ a {
   color: gray;
 }
 
-.about, .work {
+.about, .work, .archive {
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -613,6 +613,7 @@ a {
 .about_right {
   flex-direction: column;
   padding-right: 130px;
+  font-size: 17px;
 }
 
 .about_title {
@@ -882,14 +883,14 @@ a {
 }
 
 /* Archive */
-.archive {
+/* .archive {
   display: flex;
   flex-wrap: wrap;
   align-content: center;
   justify-content: center;
   position: relative;
   align-items: center;
-}
+} */
 
 .archive_sticky {
   position: absolute;
@@ -912,7 +913,7 @@ a {
   height: 100%;
 }
 
-.archive_container {
+/* .archive_container {
   display: flex;
   overflow-x: scroll;
   -webkit-overflow-scrolling: touch;
@@ -920,7 +921,7 @@ a {
   width: 100%; 
   max-width: 100vw; 
   align-items: center;
-}
+} */
 
 .archive_arrow {
   margin-left: 100px;
@@ -956,6 +957,20 @@ a {
 .archive_card:hover {
   transform: scale(1.05);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+.archive_image {
+  width: 500px;
+  height: 290px;
+  overflow: hidden;
+  border-radius: 10px;
+  margin-bottom: 80px;
+}
+
+.archive_image > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* Footer */
@@ -1899,10 +1914,6 @@ p {
     margin-bottom: 30px;
     width: 78vw;
     height: 48vw;
-  }
-
-  .archive_container {
-    flex-direction: column;
   }
 
   .archive_card > img {
