--- a/src/index.css
+++ b/src/index.css
@@ -13,26 +13,6 @@
   src: url('./assets/fonts/Humane-ExtraBold.woff');
 }
 
-@font-face {
-  font-family: 'PPEditorialNew_Italic';
-  src: url('./assets/fonts/PPEditorialNew-Italic.otf') format('opentype');
-}
-
-@font-face {
-  font-family: 'PPEditorialNew_UltraItalic';
-  src: url('./assets/fonts/PPEditorialNew-UltralightItalic.otf') format('opentype');
-}
-
-@font-face {
-  font-family: 'PPEditorialNew_Regualr';
-  src: url('./assets/fonts/PPEditorialNew-Regular.otf') format('opentype');
-}
-
-@font-face {
-  font-family: 'PPEditorialNew_Ultralight';
-  src: url('./assets/fonts/PPEditorialNew-Ultralight.otf') format('opentype');
-}
-
 /* Font / Font-size / Color */
 .h0 {
   font-size: 500px;
@@ -135,6 +115,7 @@
 
 * {
   box-sizing: border-box;
+  color: #303030;
 }
 
 /* main css part */
@@ -190,6 +171,39 @@ section > div {
   gap: 18.75px;
 }
 
+.common > a, .contact {
+  display: flex;
+  padding: 5px;
+  transform: scale(1.2);
+  justify-content: center;
+  align-items: center;
+}
+
+.common > a:first-child:hover img{
+  content: url('/public/assets/navbar/hover_home.svg');
+}
+
+.common > a:nth-child(2):hover img{
+  content: url('/public/assets/navbar/hover_person.svg');
+}
+
+.common > a:nth-child(3):hover img{
+  content: url('/public/assets/navbar/hover_folder.svg');
+}
+
+.common > a:nth-child(4):hover img{
+  content: url('/public/assets/navbar/hover_archive.svg');
+}
+
+.contact:hover > img {
+  content: url('/public/assets/navbar/hover_contact.svg');
+}
+
+.tooltip {
+  background-color: white;
+  border-radius: 30px !important;
+}
+
 .link {
   position: fixed;
   padding: 0 45px;
@@ -209,10 +223,12 @@ section > div {
   left: 40%;
   text-align: right;
   transform: translate(-40%, 0);
+  font-size: 15px;
 }
 
 .copyright {
   text-align: right;
+  font-size: 15px;
 }
 
 /* Nav */
@@ -1048,614 +1064,85 @@ a {
   padding-right: 60px;
 }
 
-
-/* Project Details */
-.project_button {
-  display: flex;
-  padding: 8px 20px;
-  border-radius: 50px;
-  justify-content: center;
-  cursor: pointer;
-  z-index: 10;
-}
-
-.project_button > img {
-  width: 18px;
-  margin-bottom: 3px;
-  margin-right: 8px;
-}
-
-.previous_button {
-  font-size: 18px;
-}
-
-.project_header {
-  position: relative;
-  height: 110vh;
+/* Project */
+.project_thumbnail {
+  margin-top: 100px;
+  width: 100%;
   overflow: hidden;
+  height: 450px;
+}
+
+.project_thumbnail img {
   width: 100%;
 }
 
-.project_nav {
-  align-items: center;
-}
-
-.project_info {
-  position: absolute;
-  width: 100%;
-  z-index: 5;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.project_info_right {
-  margin-left: 100px;
+.project_intro {
+  margin-top: 100px;
+  padding: 0 280px;
   display: flex;
   flex-direction: column;
 }
 
-.project_info_right > div:first-child {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.project_arrow_up {
-  font-size: 25px;
-  margin-right: 50px;
-}
-
-.fa-github {
-  font-size: 30px;
-}
-
-
-.project_type {
-  display: flex;
-  align-items: center;
-  margin-bottom: 100px;
-  font-size: 36px;
-  font-weight: 500;
-}
-
-.project_type > div:first-child {
-  width: 15px;
-  height: 15px;
-  border-radius: 50px;
-  border: solid 1px white;
-  margin-right: 10px;
-  margin-bottom: 5px;
-}
-
-.blackBackground {
-  background-color: hsla(0, 0%, 0%, 0.5);
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  z-index: -3;
-  backdrop-filter: blur(3px);
-}
-
-.photo {
-  position: absolute;
-  z-index: -5;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.photo > img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-
-.project_title {
-  margin-bottom: 100px;
-  font-size: 500px;
-  line-height: 0.6;
-}
-
-.project_link {
-  display: flex;
-}
-
-.previous_button::before {
-  content: "Return";
-}
-
-.project_link > a > img {
-  color: black;
-  width: 35px;
-}
-
-.project_link > a:first-child {
-  margin-right: 30px;
-}
-
-.project_role {
-  display: flex;
-  flex-direction: column;
-}
-
-.project_role_detail {
-  display: flex;
-  font-size: 21px;
-  margin-top: 50px;
-  
-}
-
-.project_role_detail > div:first-child {
-  text-transform: uppercase;
-  font-weight: 800;
-  letter-spacing: 2px;
-  width: 10vw;
-}
-
-.project_role_detail > div:nth-child(2) {
-  width: 12vw;
-  margin-left: 50px;
-  
-}
-
-.project_section {
-  margin-top: -10vh;
-  border-radius: 50px;
-}
-
-.project_detail {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 8vh 15vw;
-  position: relative;
-}
-
-/* .project_overview {
-  height: 100vh;
-} */
-
-.project_detail_title {
-  letter-spacing: 2px;
-}
-
-.title_ui {
-  font-size: 10vw;
-  display: flex;
-  align-items: center;
-}
-
-.project_detail_subtitle {
-  font-size: 35px;
-  margin-bottom: -5px;
-}
-
-.project_detail_info {
-  margin-left: 200px;
-}
-
-.project_detail_sub {
-  font-size: 22px;
-  font-family: "elza", Arial, Helvetica, sans-serif;
-  font-weight: 700;
+.project_subject {
   margin-bottom: 25px;
-}
-
-.project_detail_desc {
-  font-size: 20px;
-  font-family: "elza", Arial, Helvetica, sans-serif;
-  line-height: 1.5;
-}
-
-.project_detail_desc > a {
-  display: inline-block;
-  color:#EB5B38;
-  font-weight: 700;
-  text-decoration: underline; 
-}
-
-.project_detail_desc > span {
-  display: inline-block;
-  color:#EB5B38;
-  font-weight: 700;
-}
-
-.project_detail_desc:not(:last-of-type) {
-  margin-bottom: 25px;
-}
-
-.project_hmw {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  padding: 70px;
-  text-align: center;
-  font-size: 2.5vw;
-  background-color:#22C182;
-  margin: 5vh 0;
-}
-
-.diagram {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 250px;
-  margin-bottom: 170px;
-  padding: 0 300px;
-}
-
-.diagram > img {
-  width: 100%;
-}
-
-.project_bg {
-  flex-direction: column;
-  margin-top: 200px;
-}
-
-.project_bg > div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 200px;
-}
-
-
-.project_banner_container {
-  display: flex;
-  background-color: #22C182;
-  justify-content: center;
-  align-items: center;
-  width: 300%;
-  padding: 10px;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
-.project_banner_container > div {
-  animation: loop 120s linear infinite;
-}
-
-@keyframes loop {
-  0% {transform: translateX(0%);}
-  100% {transform: translateX(-50%);}
-}
-
-.project_output {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  margin-top: 55px;
-  padding: 5vh 15vw;
 }
 
 .project_content {
-  margin-bottom: 0;
-  padding: 20px 150px;
-  position: relative;
-  z-index: 10;
+  margin-top: 40px;
+  width: 53%;
+  margin-left: auto;
 }
 
-.project_table:first-child {
-  border-top: 0;
+.project_overview, .project_problem {
+  width: 100%;
+  padding: 0 280px;
+  margin-top: 140px;
 }
 
-.project_table:nth-child(3) {
-  border-bottom: 0;
-}
-
-.project_footer_bottom {
-  display: none;
-}
-
-.project_img {
-  overflow-x: scroll;
-  -webkit-overflow-scrolling: touch;
-  width: 100%; 
-  max-width: 100vw; 
-  padding-bottom: 10px; 
-
-  /* Hide scrollbar for IE, Edge and Firefox */
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
-
-.project_img_container {
+.overview_container {
   display: flex;
-  width: max-content;
-  margin-top: 4vh;
-  /* margin-bottom: 100px; */
-}
-
-.img_wrapper {
-  display: inline-block;
-  margin-right: 70px;
-}
-
-.img_wrapper > img {
-  width: 70vw;
-  background-repeat: no-repeat;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.pawlert_img > img {
-  width: 20vw;
-  border-radius: 20px;
-}
-
-.img_wrapper > img:hover {
-  transform: scale(1.05);
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
-}
-
-.underconstrunction {
-  background-color: #22C182;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  width: 100vw;
-  height: 100vh;
-}
-
-
-/* flex */
-.jusitfy_start {
-  display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: flex-start;
-}
-
-.flex_column {
-  display: flex;
-  flex-direction: column;
-}
-
-/* ui project css */
-.title_ui > span {
-  font-size: 9.5vw;
-}
-
-.instagram_img {
-  background-color: #1A1917;
-  padding: 0.5vw;
   border-radius: 30px;
-  display: flex;
+  border: 1px solid #FFF;
+  background: rgba(255, 255, 255, 0.50);
+  backdrop-filter: blur(2px);
+  padding: 40px 0px;
 }
 
-.instagram_img > img {
-  width: 20vw;
-  border-radius: 20px;
+.overview_container > div > div {
+  line-height: 140%;
 }
 
-.discover_table {
-  background-color: #22C182;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  padding: 30px;
-  border-radius: 20px;
-  width: 50%;
+.overview_title {
+  margin-bottom: 10px;
 }
 
-.problem_table {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  background-color: #ebebeb;
-  padding: 50px;
+.content_left {
+  background-color: #e0e0e0;
   border-radius: 20px 50px 50px 50px;
   margin-top: 20px;
+  padding: 50px;
 }
 
-.problem_table:nth-child(2) {
-  background-color: #4D57FE;
-  color: white;
+.content_right {
+  background-color: #4d57fe;
+  border-radius: 20px 50px 50px 50px;
+  margin-top: 20px;
+  padding: 50px;
+}
+
+.content_right > span, .content_right > p, .content_right p strong {
+  color: #fff;
+}
+
+.problem_content {
+  display: flex;
+  gap: 30px;
 }
 
 .problem_table > span {
   font-weight: 700;
-  color: black;
-}
-
-.problem_table > p > strong {
-  font-weight: 600;
-}
-
-p {
-  margin: 0;
-}
-
-.problem_table:nth-child(2) > span {
-  color: white;
-}
-
-.problem_table:first-child {
-  margin-right: 20px;
-  margin-bottom: 0;
-}
-
-.problem_table:nth-child(2) {
-  margin-left: 20px;
-}
-
-.discover_table > span {
-  color: white;
-  font-weight: 700;
-  font-size: 50px;
-}
-
-.discover_table:first-child {
-  margin-right: 20px;
-  margin-bottom: 0;
-}
-
-.discover_table:nth-child(2) {
-  margin-left: 20px;
-}
-
-.ui_left {
-  display: flex;
-  flex-direction: column;
-  margin-right: 100px;
-  margin-bottom: 30px;
-}
-
-.ui_info {
-  margin-left: 0;
-  margin-top: 40px;
-}
-
-.ui_info > .project_detail_desc > b {
-  color:#EB5B38;
-}
-
-.ui_img {
-  margin-bottom: 0;
-}
-
-.fullImage {
-  width: 100%;
-  margin-top: 40px;
-}
-
-
-.userFlow {
-  margin-top: 60px;
-  margin-bottom: 60px;
-}
-
-/* .project_discover {
-  margin-top: 120px;
-} */
-
-/* .project_ui {
-  margin-top: 140px;
-} */
-
-.inProgress {
-  display: flex;
-  justify-content: center;
-  margin-top: 200px;
-  margin-bottom: 200px;
-}
-
-.ui_banner {
-  margin: 0 0 8vh 0;
-}
-
-.project_overview {
-  padding: 20vh 15vw;
-}
-
-.swiper-container {
-  margin-top: 80px;
-  width: 100%;
-}
-
-.swiper-pagination-bullet {
-  background: #22C182 !important;
-}
-
-/* .project_problem {
-  margin: 140px 0;
-} */
-
-/* .deliver_container {
-  padding: 0 150px;
-} */
-
-.deliver_box {
-  align-items: center;
-}
-
-.deliver_box:not(:first-child) {
-  margin-top: 80px;
-}
-
-.deliver_desc {
-  padding-right: 110px;
-  color:#1A1917;
-}
-
-.deliver_desc > span {
-  font-size: 30px;
-  color:#22C182;
-}
-
-.deliver_desc > strong {
-  color:#EB5B38;
-}
-
-.deliver_img {
-  border-radius: 30px;
-  background-color: #1A1917;
-  padding: 0.5vw;
-  display: flex;
-}
-
-.deliver_img > img {
-  width: 20vw;
-  border-radius: 20px;
-}
-
-.project_footer {
-  margin-top: 200px;
-}
-
-.project_detail_result {
-  margin-top: 80px;
-}
-
-.result_title {
-  font-size: 25px;
-  font-weight: 700;
-}
-
-.project_detail_result > .project_detail_desc > strong {
-  color:#EB5B38;
-}
-
-.project_reflection > strong {
-  color:#EB5B38;
-}
-
-.insta_title::before {
-  content: "Hey, Whassup?";
-}
-
-.identify_title::before {
-  content: "What's Bugging Us?";
-}
-
-.discover_title::before {
-  content: "Time to Dive In!";
-}
-
-.define_title::before {
-  content: "Instagram, for everyone!";
-}
-
-.develop_title::before {
-  content: "Time to Create!";
-}
-
-.deliver_title::before {
-  content: "Here’s What I Built!";
-}
-
-.reflection_title::before {
-  content: "Looking Back...";
-}
-
-.instagram_title  {
-  font-size: 430px;
 }
 
 /* animation */
