--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,10 @@
   font-weight: 400;
 }
 
+.line_height {
+  line-height: 140%;
+}
+
 .main {
   font-family: "darkmode-mono-off", sans-serif;
   font-style: normal;
@@ -79,6 +83,7 @@
 
 .body { 
   font-family: 'pretendard', sans-serif;
+  color: #303030;
 }
 
 .bc_beige {
@@ -115,6 +120,10 @@
 
 * {
   box-sizing: border-box;
+}
+
+p {
+  margin: 0;
 }
 
 /* main css part */
@@ -1088,7 +1097,7 @@ a {
 
 .project_content {
   margin-top: 40px;
-  width: 53%;
+  width: 55%;
   margin-left: auto;
 }
 
@@ -1204,6 +1213,86 @@ a {
 
 .project_table_left {
   display: flex;
+}
+
+.project_table_right {
+  padding-left: 130px;
+}
+
+.project_table {
+  margin: 40px 0;
+  border-spacing: 0 40px;
+  border-collapse: separate;
+}
+
+.project_deliver {
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: none;
+  max-width: 100vw;
+  overflow-x: scroll;
+  padding-bottom: 10px;
+  scrollbar-width: none;
+  width: 100%;
+}
+
+.project_deliver_container {
+  display: flex;
+  margin-top: 4vh;
+  width: max-content;
+}
+
+.img_wrapper {
+  display: inline-block;
+  margin-right: 70px;
+}
+
+.img_wrapper > img {
+  background-repeat: no-repeat;
+  transition: transform .3s ease, box-shadow .3s ease;
+  border-radius: 20px;
+  width: 20vw;
+}
+
+.img_wrapper > img:hover {
+  box-shadow: 0 4px 15px #0003;
+  transform: scale(1.05);
+}
+
+.deliver_box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 140%;
+  font-size: 18px;
+}
+
+.deliver_box:not(:last-of-type) {
+  margin-bottom: 80px;
+}
+
+.deliver_box > div:first-child {
+  margin-right: 100px;
+}
+
+.deliver_desc  {
+  margin-bottom: 15px;
+}
+
+.deliver_img {
+  background-color: #1a1917;
+  border-radius: 30px;
+  display: flex;
+  padding: .5vw;
+  margin-left: auto;
+}
+
+.deliver_img > img {
+  border-radius: 20px;
+  width: 15vw;
+}
+
+.project_body:last-of-type {
+  margin-bottom: 250px;
 }
 
 /* animation */
