--- a/src/index.css
+++ b/src/index.css
@@ -239,144 +239,6 @@ section > div {
   font-size: 15px;
 }
 
-/* Nav */
-header {
-  display: flex;
-  width: 100%;
-  align-items: flex-start;
-  justify-content: space-between;
-  position: fixed;
-  top: 0;
-  padding: 20px 25px;
-  box-sizing: border-box;
-  z-index: 10;
-}
-
-.header_name {
-  text-align: center;
-}
-
-.header_right {
-  text-align: right;
-}
-
-.nav-list {
-  letter-spacing: -0.5px;
-}
-
-.nav-list {
-  display: flex;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  flex-direction: column;
-}
-
-.nav-list > li {
-  padding-bottom: 12px;
-  font-size: 18px;
-  display: flex;
-}
-
-a {
-  display: flex;
-  text-decoration: none;
-}
-
-.nav > li {
-  display: flex;
-  justify-content: flex-start;
-}
-
-.nav-list > a > li > div:first-child {
-  margin-right: 4px;
-}
-
-.nav:not(:first-child) > li {
-  margin-top: 5px;
-}
-
-.nav:not(:nth-child(4)) {
-  margin-bottom: 5px;
-}
-
-.dropdown {
-  font-size: 17px;
-  width: 25px;
-  height: 25px;
-  display: flex;
-  justify-content: center;align-items: baseline;
-  z-index: 10;
-}
-
-.mobile_nav {
-  display: none;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.mobile_nav_menu_title {
-  width: auto;
-  font-size: 17px;
-}
-
-.mobile_nav_drop {
-  position: absolute;
-  width: 100vw;
-  top: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #EB5B38;
-  max-height: 0;
-  opacity: 0;
-  overflow: hidden;
-  visibility: hidden;
-  transition: max-height 0.5s ease, opacity 0.5s ease, visibility 0s 0.5s; 
-}
-
-.mobile_nav_drop.open {
-  height: 100vh;
-  max-height: 100vh; 
-  opacity: 1;
-  visibility: visible; 
-  transition: max-height 0.5s ease, opacity 0.5s ease;
-}
-
-
-.mobile_nav_list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.mobile_nav_menu {
-  font-size: 100px;
-}
-
-.mobile_nav_menu:not(:nth-child(4)) {
-  margin-bottom: 15px;
-}
-
-.bi-plus {
-  width: 17px;
-  height: 17px;
-  transition: transform 0.3s;
-}
-
-.rotate {
-  transform: rotate(45deg);
-}
-
-.dropdown_open {
-  color: white;
-}
-
 
 /* home page */
 .home {
@@ -392,25 +254,6 @@ a {
   float: left;
   text-align: right;
   box-sizing: border-box;
-}
-
-.home_table > div {
-  padding: 20px 0;
-  border-bottom: 1px solid;
-}
-
-.home_table > div:first-child {
-  border-top: 1px solid;
-}
-
-.home_table > div:nth-child(2)::before {
-  content: "UI/UX Designer";
-}
-
-.home_arrow {
-  font-size: 180px;
-  margin-bottom: 10px;
-  transform: rotate(-45deg);
 }
 
 .home_right {
@@ -490,118 +333,7 @@ a {
   left: 30px;
 }
 
-/* Info */
-.info_main {
-  text-align: center;
-  margin-top: 200px;
-  margin-bottom: 30px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.info_title {
-  font-size: 30vw;
-  position: relative;
-}
-
-.info_title::before {
-  content: "IT'S A ME, JAINE!";
-}
-
-.info_body {
-  margin-top: 30px;
-  padding: 0 14vw;
-  text-align: left;
-  line-height: 140%;
-  /* font-weight: 500; */
-}
-
-.info_photo {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-}
-
-.info_photo1 {
-  width: 100%;
-  position: absolute;
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: flex-start;
-  transform: scale(0.9) translate(-60%, 0%);
-  transition: transform 0.3s ease;
-}
-
-.info_photo2 {
-  width: 100%;
-  position: absolute;
-  display: flex;
-  align-items: flex-start;
-  transform: scale(0.9)  translate(60%, 10%);
-  transition: transform 0.3s ease;
-}
-
-.info1 {
-  width: 20vw;
-  height: 20vw;
-  display: flex;
-  background: #ffffff8c;
-  box-sizing: border-box;
-  align-items: center;
-  justify-content: center;
-  border-radius: 15px;
-  transform: rotate(-4.28deg);
-}
-
-.info1 > img {
-  width: 18vw;
-  height: 18vw;
-  object-fit: cover;
-  border-radius: 15px;
-}
-
-.info2 {
-  width: 20vw;
-  height: 26vw;
-  display: flex;
-  background: #ffffff8c;
-  box-sizing: border-box;
-  align-items: center;
-  justify-content: center;
-  border-radius: 15px;
-  transform: rotate(8.93deg);
-}
-
-.info2 > img {
-  width: 18vw;
-  height: 24vw;
-  object-fit: cover;
-  border-radius: 15px;
-}
-
-.bubble {
-  margin-top: -1vw;
-  margin-right: 1vw;
-  width: 12vw;
-}
-
-.bubble2 {
-  margin-top: 5vw;
-  margin-left: 1vw;
-  width: 12vw;
-}
-
-.info_body > span {
-  font-weight: 700;
-  color:#EB5B38;
-}
-
-.info_body > i {
-  color: gray;
-}
+/* About  */
 
 .about, .work, .archive {
   min-height: 100vh;
@@ -703,65 +435,7 @@ a {
   width: 70%;
 }
 
-/* Banner */
-.banner {
-  display: flex;
-  background-color:#22C182;
-  justify-content: center;
-  align-items: center;
-  padding: 70px 0 40px 0;
-  font-size: 15vw;
-  margin-top: 140px;
-  white-space: nowrap;
-}
-
-
-/* Work */ 
-#work {
-  height: 140vh;
-}
-
-.work {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: center;
-  justify-content: center;
-  position: relative;
-}
-
-.work_sticky {
-  position: absolute;
-}
-
-.work_title {
-  position: sticky;
-}
-
-/* .work_container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  padding: 50px;
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-} */
-
-.card {
-  cursor: pointer;
-}
-
-.card > img {
-  width: 50vw;
-  max-width: 50vw;
-  height: 32vw;
-  border-radius: 30px;
-  object-fit: cover;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
-}
-
-/* Redesign Work */
+/* Work */
 
 .work_container {
   display: flex;
@@ -855,140 +529,15 @@ a {
   height: 100vh;
 }
 
-/* Work Hover */
-.hover_work {
-  background-color: #0000007f;
-  width: 100%;
-  height: 100%;
-  border-radius: 30px;
-  backdrop-filter: blur(5px);
-  padding: 70px;
-  box-sizing: border-box;
-  display: flex;
-  align-items: flex-start;
-  position: absolute;
-  top: 0;
-  left: 0;
-  font-size: 40px;
-  z-index: 10;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.card_title {
-  font-size: 250px;
-}
-
-.card_tag {
-  font-weight: 700;
-  margin: 0;
-  margin-bottom: 20px;
-}
-
-.card_desc {
-  margin: 0;
-  margin-top: -10px;
-  font-size: 20px;
-}
-
-.card_type {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.card_circle {
-  width: 15px;
-  height: 15px;
-  border-radius: 50px;
-  border: 1px solid #fff;
-  margin-right: 5px;
-  margin-bottom: 6px;
-}
-
 /* Archive */
-/* .archive {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: center;
-  justify-content: center;
-  position: relative;
-  align-items: center;
-} */
-
-.archive_sticky {
-  position: absolute;
-  z-index: -1;
-}
-
-.archive_list {
-  height: 100%;
-}
-
-.archive_banner {
-  display: none !important;
-}
-
-.archive_title {
-  height: 15vw;
-}
-
-.archive_box {
-  height: 100%;
-}
-
-/* .archive_container {
-  display: flex;
-  overflow-x: scroll;
-  -webkit-overflow-scrolling: touch;
-  height: 100%;
-  width: 100%; 
-  max-width: 100vw; 
-  align-items: center;
-} */
-
-.archive_arrow {
-  margin-left: 100px;
-  margin-right: 60px;
-}
-
-.archive_card_container.nav {
-  display: flex;
-  width: max-content;
-}
-
-.archive_card {
-  display: flex;
-  width: 47vw;
-  height: 29vw;
-  background: #ffffff8c;
-  border: 1px solid #ffffff;
-  margin-right: 60px;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.archive_card > img {
-  width: 45vw;
-  max-width: 45vw;
-  height: 27vw;
-  border-radius: 5px;
-  object-fit: cover;
-}
-
-.archive_card:hover {
-  transform: scale(1.05);
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
-}
 
 .archive_image {
   width: 500px;
-  height: 290px;
+  height: 260px;
   overflow: hidden;
   border-radius: 10px;
   margin-bottom: 80px;
+  transition: transform .3s ease, box-shadow .3s ease;
 }
 
 .archive_image > img {
@@ -997,79 +546,9 @@ a {
   object-fit: cover;
 }
 
-/* Footer */
-.footer {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: center;
-  justify-content: center;
-  position: relative;
-  overflow-y: hidden;
-}
-
-.footer_content {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  padding: 0 150px;
-  margin-bottom: 40px;
-}
-
-.footer_left {
-  width: 50%;
-}
-
-.footer_right {
-  width: 50%;
-}
-
-.left_content > div:nth-child(2) {
-  display: flex;
-}
-
-.arrow {
-  color: white;
-  stroke: white;
-}
-
-.mail {
-  padding-left: 15px;
-  text-decoration: none;
-}
-
-.footer_bottom {
-  position: relative;
-  font-size: 30vw;
-  margin-bottom: -50vh;
-}
-
-.footer_bottom::before {
-  content: "Reach out anytime!";
-}
-
-.table {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: solid 1px white;
-  padding: 15px;
-  width: 100%;
-  text-decoration: none;
-  box-sizing: border-box;
-}
-
-.table:first-child {
-  border-top: solid 1px white;
-}
-
-.table_menu {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.table_num {
-  padding-right: 60px;
+.archive_image:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 15px #0003;
 }
 
 /* Project */
