--- a/src/index.css
+++ b/src/index.css
@@ -173,6 +173,31 @@ section > div {
   z-index: 100;
 }
 
+.nav_content {
+  width: 24px;
+  height: 24px;
+}
+
+.homeNav {
+  background-image: url('/public/assets/navbar/home.svg');
+}
+
+.aboutNav {
+  background-image: url('/public/assets/navbar/person.svg');
+}
+
+.workNav {
+  background-image: url('/public/assets/navbar/folder.svg');
+}
+
+.archiveNav {
+  background-image: url('/public/assets/navbar/archive.svg');
+}
+
+.contactNav {
+  background-image: url('/public/assets/navbar/contact.svg');
+}
+
 .common {
   display: flex;
   align-items: flex-start;
@@ -187,23 +212,23 @@ section > div {
   align-items: center;
 }
 
-.common > a:first-child:hover img{
-  content: url('/public/assets/navbar/hover_home.svg');
+.common > a:first-child:hover .homeNav{
+  background-image: url('/public/assets/navbar/hover_home.svg');
 }
 
-.common > a:nth-child(2):hover img{
+.common > a:nth-child(2):hover .aboutNav{
   content: url('/public/assets/navbar/hover_person.svg');
 }
 
-.common > a:nth-child(3):hover img{
+.common > a:nth-child(3):hover .workNav{
   content: url('/public/assets/navbar/hover_folder.svg');
 }
 
-.common > a:nth-child(4):hover img{
+.common > a:nth-child(4):hover .archiveNav{
   content: url('/public/assets/navbar/hover_archive.svg');
 }
 
-.contact:hover > img {
+.contact:hover > .contactNav {
   content: url('/public/assets/navbar/hover_contact.svg');
 }
 
@@ -279,9 +304,10 @@ section > div {
   display: inline-flex;
   align-items: center;
   font-size: 20px;
-  border: 2px solid #B3F319;
+  border: 3px solid #B3F319;
   border-radius: 50px;
-  padding: 5px 15px;
+  padding: 6px 15px;
+  text-decoration: none;
 }
 
 .point {
@@ -295,7 +321,6 @@ section > div {
 .status > div {
   color: #B3F319;
   font-weight: 700;
-  margin-top: 3px;
 }
 
 .home_box_bold {
@@ -518,6 +543,26 @@ section > div {
   height: 500px;
   overflow: hidden;
   border-radius: 20px;
+  position: relative;
+}
+
+.gradient {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 20px;
+  background: linear-gradient(180deg, rgba(217, 217, 217, 0.00) 0%, #000000c1 100%);
+  background-blend-mode: multiply;
+}
+
+.view_case {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  padding: 10px 20px;
+  border-radius: 30px;
+  color: white;
+  border: 1px solid white;
 }
 
 .work_thumb > img {
