--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,7 @@
 }
 
 .color_green {
-  color: #D7E82A;
+  color: #D4E32B;
 }
 
 .color_orange {
@@ -264,6 +264,48 @@ section > div {
   font-size: 15px;
 }
 
+.loading-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #000;
+  color: #555;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+}
+
+.loader {
+  position: fixed;
+  width: 80px;
+  aspect-ratio: 1;
+  border: 10px solid #000;
+  box-sizing: border-box;
+  background: 
+    radial-gradient(farthest-side at right,#fff 98%,#0000) 20% 50%/40% 80%,
+    radial-gradient(farthest-side at left ,#fff 98%,#0000) 80% 50%/40% 80%,
+    #000;
+  background-repeat: no-repeat;
+  filter: blur(4px) contrast(10); 
+  animation: l18 0.8s infinite alternate;
+}
+
+@keyframes l18 {
+  0%,20% {background-position:20% 50%,80% 50%}
+  100%   {background-position:80% 50%,20% 50%}
+}
+
+.loading-message {
+  font-size: 24px;
+  font-weight: bold;
+  color: #007bff;
+}
+
+
 
 /* home page */
 .home {
@@ -304,7 +346,7 @@ section > div {
   display: inline-flex;
   align-items: center;
   font-size: 20px;
-  border: 3px solid #B3F319;
+  border: 3px solid #D4E32B;
   border-radius: 50px;
   padding: 6px 15px;
   text-decoration: none;
@@ -314,12 +356,12 @@ section > div {
   height: 10px;
   width: 10px;
   border-radius: 50%;
-  background-color: #B3F319; 
+  background-color: #D4E32B; 
   margin-right: 10px;
 }
 
 .status > div {
-  color: #B3F319;
+  color: #D4E32B;
   font-weight: 700;
 }
 
@@ -558,11 +600,17 @@ section > div {
 .view_case {
   position: absolute;
   bottom: 20px;
-  left: 20px;
+  right: 20px;
   padding: 10px 20px;
   border-radius: 30px;
   color: white;
   border: 1px solid white;
+  transition: all 0.2s;
+}
+
+.view_case:hover {
+  background-color: white;
+  color: black;
 }
 
 .work_thumb > img {
@@ -778,7 +826,7 @@ section > div {
 
 .img_wrapper > img:hover {
   box-shadow: 0 4px 15px #0003;
-  transform: scale(1.05);
+  transform: scale(1.02);
 }
 
 .deliver_box {
@@ -1605,3 +1653,32 @@ section > div {
 .swiper-pagination-bullet-active {
   background: #22C182 !important; 
 }
+
+.swiper-button-prev {
+  margin-left: 100px;
+  color: #5E5E5E !important;
+  box-sizing: border-box;
+  padding: 38px;
+  width: 30px !important;
+  height: 30px !important;
+  background-color: #ffffff94;
+  border-radius: 50%;
+  border: 1px solid white;
+  transform: scale(0.5);
+  user-select: none;
+}
+
+.swiper-button-next {
+  margin-right: 100px;
+  color: #5E5E5E !important;
+  box-sizing: border-box;
+  padding: 38px;
+  width: 30px !important;
+  height: 30px !important;
+  background-color: #ffffff94;
+  border-radius: 50%;
+  border: 1px solid white;
+  transform: scale(0.5);
+  user-select: none;
+}
+
